# ToolKit

./: .gitmodules  CMakeLists.txt  README.md  build_armv7a.sh  build_armv8.sh  build_x86.sh
src/: CMakeLists.txt  main.cpp  model.cpp  model.h
